# boom-text-summarizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
boom_text_summarizer/: main.py
boom_text_summarizer/models/: text_summarizer.py
modules/: download_model.py
