[tool.poetry]
name = "boom-text-summarizer"
version = "0.1.0"
description = ""
authors = ["Justin Gerard Ricardo <justinericardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
transformers = "^4.36.2"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.1.2%2Bcpu-cp311-cp311-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
